--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
--r requirements/common.txt
+alembic==1.4.2
+certifi==2016.2.28
+click==7.1.2
+dominate==2.5.1
+Flask==1.1.2
+Flask-Bootstrap==3.3.5.7
+Flask-Login==0.3.2
+Flask-Migrate==2.5.3
+Flask-Moment==0.5.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.14.3
+ForgeryPy==0.1
 gunicorn==19.4.5
-psycopg2==2.6.1
+itsdangerous==0.24
+Jinja2==2.11.2
+Mako==1.1.3
+MarkupSafe==0.23
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.15.0
+SQLAlchemy==1.2.4
+visitor==0.1.3
+Werkzeug==1.0.1
+wincertstore==0.2
+WTForms==2.1
