1.add vue and element ui 2.optimize the chrome plugin upload and import to mysql

--- a/config/logging.yaml
+++ b/config/logging.yaml
@@ -6,7 +6,7 @@ formatters:
 handlers:
   console:
     class: logging.StreamHandler
-    level: INFO
+    level: DEBUG
     formatter: simple
   file:
     class: logging.handlers.TimedRotatingFileHandler
