--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 alembic==1.4.2
-certifi==2016.2.28
+bce-python-sdk==0.8.37
+blinker==1.4
+certifi==2020.4.5.2
+chardet==3.0.4
 click==7.1.2
 dominate==2.5.1
 Flask==1.1.2
 Flask-Bootstrap==3.3.5.7
+Flask-JSON==0.3.4
 Flask-Login==0.3.2
 Flask-Migrate==2.5.3
 Flask-Moment==0.5.1
@@ -11,16 +15,30 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.3
 ForgeryPy==0.1
+future==0.18.2
 gunicorn==19.4.5
-itsdangerous==0.24
+idna==2.9
+importlib-metadata==1.7.0
+itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonpickle==1.4.1
 Mako==1.1.3
-MarkupSafe==0.23
+MarkupSafe==1.1.1
+pycrypto==2.6.1
+pycryptodome==3.9.7
+pycryptodomex==3.9.7
+PyMySQL==0.9.3
 python-dateutil==2.8.1
 python-editor==1.0.4
+PyYAML==5.3.1
+requests==2.24.0
+ruamel.appconfig==0.5.4
+ruamel.std.argparse==0.8.3
 six==1.15.0
 SQLAlchemy==1.2.4
+tqdm==4.46.1
+urllib3==1.25.9
 visitor==0.1.3
 Werkzeug==1.0.1
-wincertstore==0.2
 WTForms==2.1
+zipp==1.2.0
