--- a/config/logging.yaml
+++ b/config/logging.yaml
@@ -6,17 +6,17 @@ formatters:
 handlers:
   console:
     class: logging.StreamHandler
-    level: WARNING
+    level: DEBUG
     formatter: simple
   file:
     class: logging.handlers.TimedRotatingFileHandler
     filename: ./application.log
-    level: DEBUG
+    level: ERROR
     formatter: simple
     encoding: UTF-8
     when: d
     interval: 1
     backupCount: 30
 root:
-  level: DEBUG
+  #  level: DEBUG
   handlers: [file,console]
